Charlie Chaplin flip card

--- a/index.html
+++ b/index.html
@@ -104,16 +104,30 @@
             </div>
             <div class="flip3D">
                     <div class="card back slow" id="box2_back">
-                        <h2>Independent Music Professional</h2>
-                        <p>This content will be diplayed on the <strong>BACK</strong>.</p>
-                        <img src="images/butterfly.jpg" alt="butterfly">
-                        <button onclick="flipBox('box2_front', 'box2_back')">Flip Box 1</button>
+                        <h3>Charlie Chaplin</h3>
+                        <p>I built this tribute page as a practice in controlling the flow of content using jQuery. It is based on a codepen exercise. An important feature of this page is the film strip which moves in opposite direction to the page.</p>
+                        <p><strong>Technologies used</strong></p>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>jQuery</li>
+                            <li>Bootstrap</li>
+                        </ul>
+                        <a href="https://github.com/abonello/Chaplin-Tribute" target="_blank">Github Repository</a>
+                        <br>
+                        <a href="http://www.chaplin.anthonybonello.co.uk" target="_blank">Deployment</a>
+                        <div class="card-button">
+                            <button onclick="flipBox('box2_front', 'box2_back')">Flip</button>
+                        </div>
                     </div>
                     <div class="card front slow" id="box2_front">
-                        <h2>Independent Music Professional</h2>
-                        <p>This is my website related to my music activities.</p>
-                        <img src="images/Screenshot 2018-08-15 14.11.33.anthonybonello.png" alt="anthonybonello.co.uk">
-                        <button onclick="flipBox('box2_front', 'box2_back')">Flip Box 1</button>
+                        <h3>Charlie Chaplin</h3>
+                        <p>Tribute page to Charlie Chaplin and his work.</p>
+                        <img src="images/Screenshot 2018-08-17 16.07.48.chaliechaplin.png" alt="anthonybonello.co.uk">
+                        <p>Flip the card for more detail.</p>
+                        <div class="card-button">
+                            <button onclick="flipBox('box2_front', 'box2_back')">Flip</button>
+                        </div>
                     </div>
                 </div>
         </div>
@@ -130,12 +144,12 @@
                 <th>Description</th>
             </thead>
             <tbody>
-                <tr>
+                <!-- <tr>
                     <th><a href="http://www.chaplin.anthonybonello.co.uk" target="_blank">Chaplin Tribute</a></th>
                     <td><a href="https://github.com/abonello/Chaplin-Tribute" target="_blank">GitHub Repository</a></td>
                     <td>HTML CSS JavaScript Bootstrap</td>
                     <td>Practice in all three languages but especially JavaScript</td>
-                </tr>
+                </tr> -->
                 <!-- <tr>
                     <th><a href="https://abonello.github.io/JumbotronExperiment/" target="_blank">Exploring Bootstrap</a></th>
                     <td><a href="https://github.com/abonello/JumbotronExperiment" target="_blank">GitHub Repository</a></td>
