simon game card

--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
                 <button onclick="flipBox('box2_front', 'box2_back')">Flip Box 2</button>
                 <button onclick="flipBox('box3_front', 'box3_back')">Flip Box 3</button>
             </div> -->
+            <!-- anthonybonello.co.uk -->
             <div class="flip3D">
                 <div class="card back slow" id="box1_back">
                         <h3>Independent Music Professional</h3>
-                        <p>This webpage is my own site related to my music-related activities. It has brief information about the different activities I do. It also has a few examples of my compositions.</p>
+                        <p>This webpage is my own site related to my music-related activities. It has brief information about the different activities I do. It also has a few examples of my compositions. It makes use of parallax effect background.</p>
                         <p><strong>Technologies used</strong></p>
                         <ul>
                             <li>HTML</li>
@@ -102,34 +103,155 @@
                     
                 </div>
             </div>
+            <!-- charlie chaplin -->
             <div class="flip3D">
-                    <div class="card back slow" id="box2_back">
-                        <h3>Charlie Chaplin</h3>
-                        <p>I built this tribute page as a practice in controlling the flow of content using jQuery. It is based on a codepen exercise. An important feature of this page is the film strip which moves in opposite direction to the page.</p>
-                        <p><strong>Technologies used</strong></p>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>jQuery</li>
-                            <li>Bootstrap</li>
-                        </ul>
-                        <a href="https://github.com/abonello/Chaplin-Tribute" target="_blank">Github Repository</a>
-                        <br>
-                        <a href="http://www.chaplin.anthonybonello.co.uk" target="_blank">Deployment</a>
-                        <div class="card-button">
-                            <button onclick="flipBox('box2_front', 'box2_back')">Flip</button>
-                        </div>
-                    </div>
-                    <div class="card front slow" id="box2_front">
-                        <h3>Charlie Chaplin</h3>
-                        <p>Tribute page to Charlie Chaplin and his work.</p>
-                        <img src="images/Screenshot 2018-08-17 16.07.48.chaliechaplin.png" alt="anthonybonello.co.uk">
-                        <p>Flip the card for more detail.</p>
-                        <div class="card-button">
-                            <button onclick="flipBox('box2_front', 'box2_back')">Flip</button>
-                        </div>
+                <div class="card back slow" id="box2_back">
+                    <h3>Charlie Chaplin</h3>
+                    <p>I built this tribute page as a practice in controlling the flow of content using jQuery. It is based on a codepen exercise. An important feature of this page is the film strip which moves in opposite direction to the page.</p>
+                    <p><strong>Technologies used</strong></p>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>jQuery</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                    <a href="https://github.com/abonello/Chaplin-Tribute" target="_blank">Github Repository</a>
+                    <br>
+                    <a href="http://www.chaplin.anthonybonello.co.uk" target="_blank">Deployment</a>
+                    <div class="card-button">
+                        <button onclick="flipBox('box2_front', 'box2_back')">Flip</button>
                     </div>
                 </div>
+                <div class="card front slow" id="box2_front">
+                    <h3>Charlie Chaplin</h3>
+                    <p>Tribute page to Charlie Chaplin and his work.</p>
+                    <img src="images/Screenshot 2018-08-17 16.07.48.chaliechaplin.png" alt="anthonybonello.co.uk">
+                    <p>Flip the card for more detail.</p>
+                    <div class="card-button">
+                        <button onclick="flipBox('box2_front', 'box2_back')">Flip</button>
+                    </div>
+                </div>
+            </div>
+            <!-- simon game -->
+            <div class="flip3D">
+                <div class="card back slow" id="box3_back">
+                    <h3>Simon Game</h3>
+                    <p>I recreated simon game which runs in a browser. As the game progresses there are various aspects of the GUI which change, The color of the title on the game "console" changes, and a number shows the length of the sequence. There is also an option to change the set of sounds. Two are implemented at present but other sets can be added. If an error occurs "Err" is displayed and a short tune is played using the current sound set.</p>
+                    <table style="width:100%">
+                        <thead><th style="text-align: center" colspan="3">Technologies used</th></thead>
+                        <tr>
+                            <td width="33%">HTML</td>
+                            <td  width="33%">CSS</td>
+                            <td  width="33%">jQuery</td>
+                        </tr>
+                    </table>
+                    <a href="https://github.com/abonello/simon-game" target="_blank">Github Repository</a>
+                    <br>
+                    <a href="https://abonello.github.io/simon-game/" target="_blank">Deployment</a>
+                    <div class="card-button">
+                        <button onclick="flipBox('box3_front', 'box3_back')">Flip</button>
+                    </div>
+                </div>
+                <div class="card front slow" id="box3_front">
+                    <h3>Simon Game</h3>
+                    <p>This is a remake of the classical Simon game.</p>
+                    <img src="images/Screenshot 2018-08-18 08.02.39.simongame.png" alt="anthonybonello.co.uk">
+                    <p>Flip the card for more detail.</p>
+                    <div class="card-button">
+                        <button onclick="flipBox('box3_front', 'box3_back')">Flip</button>
+                    </div>
+                </div>
+            </div>
+            <!-- addition game -->
+            <div class="flip3D">
+                <div class="card back slow" id="box4_back">
+                    <h3>Addition Game</h3>
+                    <p>I recreated simon game which runs in a browser. As the game progresses there are various aspects of the GUI which change, The color of the title on the game "console" changes, and a number shows the length of the sequence. There is also an option to change the set of sounds. Two are implemented at present but other sets can be added. If an error occurs "Err" is displayed and a short tune is played using the current sound set.</p>
+                    <table style="width:100%">
+                        <thead><th style="text-align: center" colspan="3">Technologies used</th></thead>
+                        <tr>
+                            <td width="33%">HTML</td>
+                            <td  width="33%">CSS</td>
+                            <td  width="33%">jQuery</td>
+                        </tr>
+                    </table>
+                    <a href="https://github.com/abonello/simon-game" target="_blank">Github Repository</a>
+                    <br>
+                    <a href="https://abonello.github.io/simon-game/" target="_blank">Deployment</a>
+                    <div class="card-button">
+                        <button onclick="flipBox('box4_front', 'box4_back')">Flip</button>
+                    </div>
+                </div>
+                <div class="card front slow" id="box4_front">
+                    <h3>Addition Game</h3>
+                    <p>This is a remake of the classical Simon game.</p>
+                    <img src="images/Screenshot 2018-08-18 08.02.39.simongame.png" alt="anthonybonello.co.uk">
+                    <p>Flip the card for more detail.</p>
+                    <div class="card-button">
+                        <button onclick="flipBox('box4_front', 'box4_back')">Flip</button>
+                    </div>
+                </div>
+            </div>
+            <!-- webapp - audio -->
+            <div class="flip3D">
+                <div class="card back slow" id="box5_back">
+                    <h3>WebApp Audio</h3>
+                    <p>I recreated simon game which runs in a browser. As the game progresses there are various aspects of the GUI which change, The color of the title on the game "console" changes, and a number shows the length of the sequence. There is also an option to change the set of sounds. Two are implemented at present but other sets can be added. If an error occurs "Err" is displayed and a short tune is played using the current sound set.</p>
+                    <table style="width:100%">
+                        <thead><th style="text-align: center" colspan="3">Technologies used</th></thead>
+                        <tr>
+                            <td width="33%">HTML</td>
+                            <td  width="33%">CSS</td>
+                            <td  width="33%">jQuery</td>
+                        </tr>
+                    </table>
+                    <a href="https://github.com/abonello/simon-game" target="_blank">Github Repository</a>
+                    <br>
+                    <a href="https://abonello.github.io/simon-game/" target="_blank">Deployment</a>
+                    <div class="card-button">
+                        <button onclick="flipBox('box5_front', 'box5_back')">Flip</button>
+                    </div>
+                </div>
+                <div class="card front slow" id="box5_front">
+                    <h3>WebApp Audio</h3>
+                    <p>This is a remake of the classical Simon game.</p>
+                    <img src="images/Screenshot 2018-08-18 08.02.39.simongame.png" alt="anthonybonello.co.uk">
+                    <p>Flip the card for more detail.</p>
+                    <div class="card-button">
+                        <button onclick="flipBox('box5_front', 'box5_back')">Flip</button>
+                    </div>
+                </div>
+            </div>
+            <!-- explore SVG -->
+            <div class="flip3D">
+                <div class="card back slow" id="box6_back">
+                    <h3>Explore SVG</h3>
+                    <p>I recreated simon game which runs in a browser. As the game progresses there are various aspects of the GUI which change, The color of the title on the game "console" changes, and a number shows the length of the sequence. There is also an option to change the set of sounds. Two are implemented at present but other sets can be added. If an error occurs "Err" is displayed and a short tune is played using the current sound set.</p>
+                    <table style="width:100%">
+                        <thead><th style="text-align: center" colspan="3">Technologies used</th></thead>
+                        <tr>
+                            <td width="33%">HTML</td>
+                            <td  width="33%">CSS</td>
+                            <td  width="33%">jQuery</td>
+                        </tr>
+                    </table>
+                    <a href="https://github.com/abonello/simon-game" target="_blank">Github Repository</a>
+                    <br>
+                    <a href="https://abonello.github.io/simon-game/" target="_blank">Deployment</a>
+                    <div class="card-button">
+                        <button onclick="flipBox('box6_front', 'box6_back')">Flip</button>
+                    </div>
+                </div>
+                <div class="card front slow" id="box6_front">
+                    <h3>Explore SVG</h3>
+                    <p>This is a remake of the classical Simon game.</p>
+                    <img src="images/Screenshot 2018-08-18 08.02.39.simongame.png" alt="anthonybonello.co.uk">
+                    <p>Flip the card for more detail.</p>
+                    <div class="card-button">
+                        <button onclick="flipBox('box6_front', 'box6_back')">Flip</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="row main-row">
 
@@ -174,12 +296,12 @@
                     <td>-</td>
                     <td>-</td>
                 </tr>
-                <tr>
+                <!-- <tr>
                     <th><a href="https://abonello.github.io/simon-game/" target="_blank">SIMON Game</a></th>
                     <td>-</td>
                     <td>-</td>
                     <td>-</td>
-                </tr>
+                </tr> -->
                 <tr>
                     <th><a href="https://thorin-and-company-tutorial.herokuapp.com/" target="_blank">Thorin and Company</a></th>
                     <td><a href="https://github.com/abonello/Thorin-and-Company" target="_blank">GitHub Repository</a></td>
