--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
         <p><span style="font-size:24px;"><strong>WATCH THIS SPACE. . . . . .</strong></span></p>
 
-
+        </div>
         
 
     </div>
@@ -372,7 +372,7 @@
                     <li><a href = "https://www.linkedin.com/in/anthonybonello/" target = "_blank"><i class="fa fa-linkedin"></i> My Linkedin</a></li>
                 </ul>
             </div>
-            <div class="col-sm-0 col-md-4></div>
+            <div class="col-sm-0 col-md-4"></div>
         
         </div>
     </footer>
