--- a/index.html
+++ b/index.html
@@ -52,15 +52,12 @@
             <div class="hidden-xs hidden-sm col-md-2 "></div>
             <div class="col-xs-12 col-sm-9 col-md-8">
                 <h1><span style="font-size:48px;">Anthony Bonello</span></h1>
-                <!-- span style="font-size:20px;">This is the website for Composer and&nbsp;Conductor Anthony Bonello</span -->
                 <h2>FullStack Webdesign</h2>
                 <p><b>This website is updated regularly.</b></p>
             </div>
             <div class="hidden-xs col-sm-3 col-md-2">
                 <figure>
-                    <!--a href="#"><img class="thumbnail" alt="Thumbnail" src="images/bettaSplendens.png" height = 140>
-                    </a-->
-                    <span class="fish"><a href="#">1</a></span>
+                    <span class="fish"><a href="#"></a></span>
                 </figure>
             </div>
         </div>
