--- a/index.html
+++ b/index.html
@@ -246,26 +246,29 @@
                 <div class="flip3D">
                     <div class="card back slow" id="box6_back">
                         <h3>Explore SVG</h3>
-                        <p>I recreated simon game which runs in a browser. As the game progresses there are various aspects of the GUI which change, The color of the title on the game "console" changes, and a number shows the length of the sequence. There is also an option to change the set of sounds. Two are implemented at present but other sets can be added. If an error occurs "Err" is displayed and a short tune is played using the current sound set.</p>
+                        <p>Apart from creating static images with svg, we can also animate those images. The           animation in this case is achieved completely using CSS.<br>
+                            Canvas which is a way to build scalable vector graphics is a very important building block of graphs used by other libraries such as d3.js. In combination with crossfilter and DC.js these technologies can be very powerful in data analysis and display. </p>
+                        <br>
+                        <br>
                         <table style="width:100%">
                             <thead><th style="text-align: center" colspan="3">Technologies used</th></thead>
                             <tr>
-                                <td width="33%">HTML</td>
-                                <td  width="33%">CSS</td>
-                                <td  width="33%">jQuery</td>
+                                <td width="25%">HTML</td>
+                                <td  width="25%">CSS</td>
+                                <td  width="25%">SVG</td>
                             </tr>
                         </table>
-                        <a href="https://github.com/abonello/simon-game" target="_blank">Github Repository</a>
+                        <a href="https://github.com/abonello/CanvasExplore" target="_blank">Github Repository</a>
                         <br>
-                        <a href="https://abonello.github.io/simon-game/" target="_blank">Deployment</a>
+                        <a href="https://abonello.github.io/CanvasExplore/" target="_blank">Deployment</a>
                         <div class="card-button">
                             <button onclick="flipBox('box6_front', 'box6_back')">Flip</button>
                         </div>
                     </div>
                     <div class="card front slow" id="box6_front">
                         <h3>Explore SVG</h3>
-                        <p>This is a remake of the classical Simon game.</p>
-                        <img src="images/Screenshot 2018-08-18 08.02.39.simongame.png" alt="anthonybonello.co.uk">
+                        <p>An experiment with creating images with svg.</p>
+                        <img src="images/Screenshot 2018-08-18 19.28.16.exploresvg.png" alt="explore svg">
                         <p>Flip the card for more detail.</p>
                         <div class="card-button">
                             <button onclick="flipBox('box6_front', 'box6_back')">Flip</button>
@@ -311,12 +314,12 @@
                     <td>-</td>
                     <td>-</td>
                 </tr>
-                <tr>
+                <!-- <tr>
                     <th><a href="https://abonello.github.io/CanvasExplore/" target="_blank">Exolore SVG</a></th>
                     <td>-</td>
                     <td>-</td>
                     <td>-</td>
-                </tr>
+                </tr> -->
                 <!-- <tr>
                     <th><a href="https://abonello.github.io/simon-game/" target="_blank">SIMON Game</a></th>
                     <td>-</td>
