Fix github link in  footer.

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         
             <div class="col-sm-6 col-md-4 links min-height-footer">
                 <ul class="list-inline social-links">
-                    <li><a href = "https://github.com/abonello/riddle-game-app" target = "_blank"><i class="fa fa-github"></i> Github Repository</a></li>
+                    <li><a href = "https://github.com/abonello" target = "_blank"><i class="fa fa-github"></i> Github Repository</a></li>
                     <li><a href = "https://www.linkedin.com/in/anthonybonello/" target = "_blank"><i class="fa fa-linkedin"></i> My Linkedin</a></li>
                 </ul>
             </div>
