--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="card front slow" id="box2_front">
                         <h3>Riddle Me This Game</h3>
                         <p>This is a pictionary like game.</p>
-                        <img src="images/Screenshot 2018-10-28 13.32.42.png" alt="riddle me this game">
+                        <img src="images/Screenshot 2018-10-28 13.32.42.riddle.png" alt="riddle me this game">
                         <p>Flip the card for more detail.</p>
                         <div class="card-button">
                             <button onclick="flipBox('box2_front', 'box2_back')">Flip</button>
@@ -201,7 +201,7 @@
                     <div class="card front slow" id="box3_front">
                         <h3>Nutrition Value App</h3>
                         <p>This web app keeps tab of the nutritional value of the food I eat.</p>
-                        <img src="images/Screenshot 2018-10-28 14.38.59.png" alt="Nutrition Web App">
+                        <img src="images/Screenshot 2018-10-28 14.38.59.nutrition.png" alt="Nutrition Web App">
                         <p>Flip the card for more detail.</p>
                         <div class="card-button">
                             <button onclick="flipBox('box3_front', 'box3_back')">Flip</button>
